[fix] layout shifting

--- a/src/app/features/tasks/task-board/task-board.component.scss
+++ b/src/app/features/tasks/task-board/task-board.component.scss
@@ -17,3 +17,11 @@
 .status-column{
   min-width: 130px;
 }
+
+.buttons-container{
+  margin-right: 20px;
+}
+
+.loading-container{
+  max-height: 50px;
+}
